--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Garagem Inteligente</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="garagem.css">
 </head>
 <body>
     <div id="telaPrincipal">
